--- a/styles/hero.css
+++ b/styles/hero.css
@@ -40,20 +40,24 @@
 
 .comp-docs {
   position: absolute;
-  padding: 2rem;
+  padding: 1rem;
   left: 200px;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 615px) {
   .sidebar {
-    left: -250px;
+    right: -250px;
     transition: all 250ms ease;
   }
   .ham-active {
-    left: 0;
-    width: 70%;
+    padding-top: 3rem;
+    top: 0;
+    right: 0;
+    width: 60%;
     background: var(--body);
     z-index: 3;
+    text-align: center;
+    max-height: 100vh;
     /* transition: all 250ms ease; */
   }
 
@@ -66,7 +70,7 @@
   .comp-docs {
     width: 100%;
     left: 0px;
-    padding: 2rem;
+    padding: 1rem;
   }
   .hero {
     max-width: 100vw;
