--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -61,7 +61,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0rem 1.2rem;
+  margin: 0rem 2rem;
 }
 .dark-light .sun,
 .moon {
@@ -91,16 +91,18 @@
 }
 .sun {
   font-size: 3.6rem;
-  color: #fff;
+  color: #f7f7f7;
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 615px) {
   .nav-container .navbar {
     padding: 0 1rem;
     min-width: 300px;
     max-width: 100vw;
+
     align-items: center;
     justify-content: space-between;
   }
+
   .hamburger-div {
     display: flex;
     align-items: center;
