--- a/styles/reset.css
+++ b/styles/reset.css
@@ -28,14 +28,14 @@ body.dark {
 }
 
 /* Works on Firefox */
-* {
+body {
   scrollbar-width: thin;
   scrollbar-color: var(--primary) var(--heading);
 }
 
 /* Works on Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
-  width: 8px;
+  width: 5px;
 }
 
 *::-webkit-scrollbar-track {
@@ -45,3 +45,13 @@ body.dark {
 *::-webkit-scrollbar-thumb {
   background-color: var(--primary);
 }
+
+/* body::-webkit-scrollbar {
+  width: 1rem;
+}
+body::-webkit-scrollbar-track {
+  background: var(--heading);
+}
+body::-webkit-scrollbar-thumb {
+  background: var(--primary);
+} */
