sidebar height update

--- a/styles/hero.css
+++ b/styles/hero.css
@@ -57,7 +57,7 @@
     background: var(--body);
     z-index: 3;
     text-align: center;
-    max-height: 100vh;
+    min-height: 100%;
     /* transition: all 250ms ease; */
   }
 
