Change darkmode heading color

--- a/styles/reset.css
+++ b/styles/reset.css
@@ -24,7 +24,7 @@ body.dark {
   --body: #222831;
   --text: #f7f7f7;
   --primary: #02bfc9;
-  --heading: #f7f7f7;
+  --heading: #e7e7e7;
 }
 
 /* Works on Firefox */
