--- a/components.css
+++ b/components.css
@@ -1,1 +1,3 @@
 @import url("/components/avatar/avatar.css");
+@import url("/components/alert/alert.css");
+@import url("/components/badge/badge.css");
