--- a/components/badge/badge.css
+++ b/components/badge/badge.css
@@ -27,7 +27,7 @@
   font-weight: 600;
   top: 0px;
   right: 0px;
-  padding: 0 0.3rem;
+  padding: 0 0.3em;
   border-radius: 50%;
   background: var(--blue-300);
   color: var(--gray-500);
