--- a/components.css
+++ b/components.css
@@ -1,3 +1,5 @@
 @import url("/components/avatar/avatar.css");
 @import url("/components/alert/alert.css");
 @import url("/components/badge/badge.css");
+@import url("/components/button/button.css");
+@import url("/components/input/input.css");
