--- a/components.css
+++ b/components.css
@@ -3,3 +3,4 @@
 @import url("/components/badge/badge.css");
 @import url("/components/button/button.css");
 @import url("/components/input/input.css");
+@import url("/components/image/image.css");
