--- a/components.css
+++ b/components.css
@@ -4,3 +4,4 @@
 @import url("/components/button/button.css");
 @import url("/components/input/input.css");
 @import url("/components/image/image.css");
+@import url("/components/card/card.css");
