--- a/styles/hero.css
+++ b/styles/hero.css
@@ -71,13 +71,14 @@
   gap: 1.6rem;
 }
 
-.comp-code iframe {
-  width: 100%;
-  height: 100%;
-  border: none;
+.comp-code pre {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+  line-height: 1.6;
+  width: fit-content;
+  margin: 0 auto;
 }
-
-@media only screen and (max-width: 615px) {
+@media only screen and (max-width: 800px) {
   .sidebar {
     right: -250px;
     transition: all 250ms ease;
