--- a/styles/reset.css
+++ b/styles/reset.css
@@ -36,9 +36,10 @@ body.dark {
 /* Works on Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
   width: 3px;
+  height: 3px;
 }
 body::-webkit-scrollbar {
-  width: 12px;
+  width: 8px;
 }
 
 *::-webkit-scrollbar-track {
