--- a/components/avatar/avatar.css
+++ b/components/avatar/avatar.css
@@ -4,9 +4,14 @@
 .ct-avatar {
   width: 32px;
   height: 32px;
+  border-radius: 50%;
 }
 
 .ct-round {
+  object-fit: cover;
+  border-radius: 50%;
+}
+.ct-fallback {
   object-fit: cover;
   border-radius: 50%;
 }
