--- a/styles/hero.css
+++ b/styles/hero.css
@@ -78,6 +78,12 @@
   width: fit-content;
   margin: 0 auto;
 }
+code {
+  color: var(--primary);
+}
+.comp-code code {
+  font-size: 1.6rem;
+}
 @media only screen and (max-width: 800px) {
   .sidebar {
     right: -250px;
