--- a/styles/hero.css
+++ b/styles/hero.css
@@ -72,11 +72,12 @@
 }
 
 .comp-code pre {
+  margin: 0 auto;
   white-space: pre-wrap;
   word-wrap: break-word;
   line-height: 1.6;
-  width: fit-content;
-  margin: 0 auto;
+  max-width: fit-content;
+  height: 100%;
 }
 code {
   color: var(--primary);
