--- a/styles/hero.css
+++ b/styles/hero.css
@@ -76,7 +76,7 @@
   white-space: pre-wrap;
   word-wrap: break-word;
   line-height: 1.6;
-  max-width: max-content;
+  max-width: 80%;
 }
 code {
   color: var(--primary);
