--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -5,7 +5,7 @@
   top: 0;
   left: 0;
   height: 100px;
-  width: 100%;
+  width: 100vw;
   background: var(--body);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   z-index: 2;
@@ -96,8 +96,8 @@
 }
 @media only screen and (max-width: 928px) {
   .nav-container .navbar {
-    padding: 0 1rem;
-    min-width: 200px;
+    margin: 0 1rem;
+    min-width: 300px;
     max-width: 100vw;
     align-items: center;
     justify-content: space-between;
@@ -117,8 +117,5 @@
   }
   .nav-div ul {
     display: none;
-  }
-  .github {
-    padding: 0.8rem;
   }
 }
