--- a/styles/hero.css
+++ b/styles/hero.css
@@ -71,13 +71,14 @@
   gap: 1.6rem;
 }
 
-.comp-code pre {
+/* .comp-code pre {
+  padding: 0;
   margin: 0 auto;
   white-space: pre-wrap;
   word-wrap: break-word;
   line-height: 1.6;
-  max-width: 80%;
-}
+  width: 100%;
+} */
 code {
   color: var(--primary);
 }
