--- a/styles/hero.css
+++ b/styles/hero.css
@@ -71,19 +71,18 @@
   gap: 1.6rem;
 }
 
-/* .comp-code pre {
-  padding: 0;
-  margin: 0 auto;
+.comp-code pre {
   white-space: pre-wrap;
   word-wrap: break-word;
+  width: fit-content;
+  margin: 0 auto;
   line-height: 1.6;
-  width: 100%;
-} */
+}
 code {
   color: var(--primary);
 }
 .comp-code code {
-  font-size: 1.6rem;
+  font-size: 1.4rem;
 }
 @media only screen and (max-width: 928px) {
   .sidebar {
