--- a/components.css
+++ b/components.css
@@ -5,3 +5,6 @@
 @import url("/components/input/input.css");
 @import url("/components/image/image.css");
 @import url("/components/card/card.css");
+@import url("/components/text_utils/text.css");
+@import url("/components/lists/lists.css");
+@import url("/components/navbar/nav.css");
