--- a/components/root.css
+++ b/components/root.css
@@ -6,6 +6,7 @@
   --body: #f9f9f9;
 
   /* Default color VIBGYOR */
+  --gray-100: #ffffff;
   --gray-300: #d1d5db;
   --gray-500: #6b7280;
   --gray-700: #374151;
