modal added in docs

--- a/components.css
+++ b/components.css
@@ -8,3 +8,4 @@
 @import url("/components/text_utils/text.css");
 @import url("/components/lists/lists.css");
 @import url("/components/navbar/nav.css");
+@import url("/components/modal/modal.css");
