added rating comp

--- a/components.css
+++ b/components.css
@@ -9,3 +9,4 @@
 @import url("/components/lists/lists.css");
 @import url("/components/navbar/nav.css");
 @import url("/components/modal/modal.css");
+@import url("/components/rating/rating.css");
