grid comp added

--- a/components.css
+++ b/components.css
@@ -11,3 +11,4 @@
 @import url("/components/modal/modal.css");
 @import url("/components/rating/rating.css");
 @import url("/components/toast/toast.css");
+@import url("/components/grids/grid.css");
