comment the color

--- a/styles/colors.css
+++ b/styles/colors.css
@@ -20,6 +20,7 @@
   color: #e7e7e7;
 }
 
+/* Give colors explicitly coz the dark mode is giving problem here  */
 .ct-primary {
   background: #00adb5;
 }
