--- a/styles/main.css
+++ b/styles/main.css
@@ -3,7 +3,7 @@
 .main {
   color: var(--heading);
   max-width: 80vw;
-  min-height: 100vh;
+  min-height: 90vh;
   margin: 0 auto;
   display: flex;
   align-items: center;
@@ -39,4 +39,39 @@
 }
 .get-started:hover {
   box-shadow: 0 10px 10px rgba(0, 0, 0, 0.25);
+}
+
+/* Main landing page footer  */
+.footer {
+  font-size: 2.2rem;
+  font-family: "acumin-pro", sans-serif;
+  /* font-family: "Lato", sans-serif; */
+  height: 20vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: fixed;
+  bottom: 1rem;
+  width: 100%;
+  color: var(--text);
+}
+.footer p a {
+  padding: 0;
+  margin: 0;
+}
+
+.socials a {
+  text-decoration: none;
+  margin: 1rem;
+}
+.socials a img {
+  border-radius: 50%;
+  transition: all 250ms ease;
+}
+.socials a img:hover {
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.25);
+}
+.footer p {
+  padding: 1rem;
 }
