--- a/components/card/card.css
+++ b/components/card/card.css
@@ -39,7 +39,7 @@
   right: 0.5rem;
   top: 0.5rem;
   color: var(--red-500);
-  background-color: white;
+  background-color: var(--gray-100);
   padding: 5px;
   border-radius: 50%;
 }
