--- a/styles/root.css
+++ b/styles/root.css
@@ -1,9 +1,10 @@
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 :root {
   /* color theme of lib  */
-  --heading: #222831;
+  /* --heading: #222831;
   --text: #393e46;
-  --primary: #00adb5;
-  --body: #f9f9f9;
+  --primary: #02bfc9;
+  --body: #f9f9f9; */
 
   /* Default color VIBGYOR */
   --gray-100: #efefef;
