--- a/components/navbar/nav.css
+++ b/components/navbar/nav.css
@@ -1,7 +1,7 @@
-@import url("/components/root.css");
-@import url("/components/button/button.css");
-@import url("/components/input/input.css");
-@import url("/components/badge/badge.css");
+@import url("./components/root.css");
+@import url("./components/button/button.css");
+@import url("./components/input/input.css");
+@import url("./components/badge/badge.css");
 .nav-bar {
   padding: 1rem;
   display: flex;
