--- a/components.css
+++ b/components.css
@@ -1,14 +1,14 @@
-@import url("/components/avatar/avatar.css");
-@import url("/components/alert/alert.css");
-@import url("/components/badge/badge.css");
-@import url("/components/button/button.css");
-@import url("/components/input/input.css");
-@import url("/components/image/image.css");
-@import url("/components/card/card.css");
-@import url("/components/text_utils/text.css");
-@import url("/components/lists/lists.css");
-@import url("/components/navbar/nav.css");
-@import url("/components/modal/modal.css");
-@import url("/components/rating/rating.css");
-@import url("/components/toast/toast.css");
-@import url("/components/grids/grid.css");
+@import url("./components/alert/alert.css");
+@import url("./components/avatar/avatar.css");
+@import url("./components/badge/badge.css");
+@import url("./components/button/button.css");
+@import url("./components/input/input.css");
+@import url("./components/image/image.css");
+@import url("./components/card/card.css");
+@import url("./components/text_utils/text.css");
+@import url("./components/lists/lists.css");
+@import url("./components/navbar/nav.css");
+@import url("./components/modal/modal.css");
+@import url("./components/rating/rating.css");
+@import url("./components/toast/toast.css");
+@import url("./components/grids/grid.css");
