--- a/components/navbar/nav.css
+++ b/components/navbar/nav.css
@@ -17,7 +17,7 @@
 .ct-right-nav {
   display: flex;
 }
-.ct-nav-cart {
+.ct-nav-icons {
   display: flex;
   align-items: center;
   justify-content: center;
