--- a/components/card/card.css
+++ b/components/card/card.css
@@ -1,4 +1,4 @@
-@import url("/components/root.css");
+@import url("/styles/root.css");
 
 /*------------ responsive img imp ------------*/
 .ct-card-img {
