--- a/components/lists/lists.css
+++ b/components/lists/lists.css
@@ -1,4 +1,4 @@
-@import url("/components/root.css");
+@import url("/styles/root.css");
 @import url("/components/avatar/avatar.css");
 
 .ct-ul-list {
