--- a/components/navbar/nav.css
+++ b/components/navbar/nav.css
@@ -1,4 +1,4 @@
-@import url("../../styles/root.css");
+@import url("/styles/root.css");
 @import url("../button/button.css");
 @import url("../input/input.css");
 @import url("../badge/badge.css");
