FEAT : Add the Slider in CL

--- a/components.css
+++ b/components.css
@@ -12,3 +12,4 @@
 @import url("./components/rating/rating.css");
 @import url("./components/toast/toast.css");
 @import url("./components/grids/grid.css");
+@import url("./components//slider//slider.css");
